# murmur

./: .gitignore  BUGS.md  CLAUDE.md  README.md
backend/: README.md  bench_vad.py  pyproject.toml  requirements.txt
backend/murmur/: audio.py  cli.py  config.py  polish.py  server.py  streaming.py  transcribe.py  vad.py
mac/: AppIcon.icns  Info.plist  Package.swift  README.md  build-app.sh
mac/Sources/Murmur/: AppDelegate.swift  BackendClient.swift  BackendProcess.swift  HotkeyManager.swift  Paster.swift  PillController.swift  PillView.swift  SettingsStore.swift  SettingsView.swift  SettingsWindowController.swift  Waveform.swift  main.swift
