[project]
name = "murmur"
version = "0.1.0"
description = "Local voice-to-text dictation for macOS — Python backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pyperclip>=1.9",
]

[project.scripts]
murmur-server = "murmur.server:main"
murmur-cli = "murmur.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["murmur*"]
